--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -7014,7 +7014,7 @@
                                               <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -7340,7 +7340,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -7646,7 +7646,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -7972,7 +7972,7 @@
                                               <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -8298,7 +8298,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -8601,7 +8601,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -8906,7 +8906,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -9211,7 +9211,7 @@
                                               <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -9514,7 +9514,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -9820,7 +9820,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -10126,7 +10126,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -10429,7 +10429,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -10732,7 +10732,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -11040,7 +11040,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -11346,7 +11346,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -11652,7 +11652,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -11944,7 +11944,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -12247,7 +12247,7 @@
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -12555,7 +12555,7 @@
                                               <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
@@ -12862,7 +12862,7 @@
                                               <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
-                                              <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
+                                              <div class="card-alt-1__btn-save-wrapper card-alt-1__btn-save-wrapper-var dir dir-ltr">
                                               <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
