--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -13109,7 +13109,7 @@
                               <!-- dof -->
                               <div class="hidden cezhrh0 dir dir-ltr show-list-wrapper" aria-hidden="false" style="white-space: nowrap; position: absolute; margin-left: 24px; margin-top: 24px; top: 0px; left: 0px; z-index: 1; transition: transform 850ms cubic-bezier(0.25, 1, 0.5, 1) 0s;">
                                 <div class="c153at8g dir dir-ltr">
-                                 <div class="c15e4bhw ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
+                                 <div class="wishlist__map-controls ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
                                   <button aria-label="Close fullscreen map" type="button" class="b117oblx dir dir-ltr" id="show-list">
                                    <div class="rg7707h dir dir-ltr">
                                     <svg
@@ -13134,7 +13134,7 @@
                               style="white-space: nowrap; position: absolute; margin-left: 24px; margin-top: 24px; top: 0px; left: 0px; z-index: 1; transition: transform 850ms cubic-bezier(0.25, 1, 0.5, 1) 0s;"
                               >
                               <div class="c153at8g dir dir-ltr">
-                                <div class="c15e4bhw ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
+                                <div class="wishlist__map-controls ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
                                 <button aria-label="Expand map and collapse list view" type="button" class="b117oblx dir dir-ltr" id="show-full">
                                   <div class="l1pjhd3s dir dir-ltr">
                                   <svg
@@ -13154,7 +13154,7 @@
                               </div>
                               </div>
                               <div class="cezhrh0 dir dir-ltr" aria-hidden="false" style="white-space: nowrap; position: absolute; margin-top: 24px; top: 0px; left: 50%; transform: translateX(-50%); z-index: 1;">
-                                <div class="c15e4bhw ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
+                                <div class="wishlist__map-controls ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
                                  <button disabled="" type="button" class="b117oblx dir dir-ltr">
                                   <div aria-label="Map is loading" class="c1ujw3r6 dir dir-ltr" data-testid="map-loader-control" aria-live="polite" role="status">
                                    <span><span class="d13up9z1 d1ybflfs dir dir-ltr"></span><span class="d13up9z1 dsawj3h dir dir-ltr"></span><span class="d13up9z1 dir dir-ltr"></span></span>
