--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -4743,7 +4743,7 @@
                                                                           style="cursor: auto; height: 48px; transform: scale(1); transform-origin: 50% 50% 0px; transition: transform 150ms ease-out 0s; width: 48px;">
                                                                           <div class="c16iuq07 dir dir-ltr"
                                                                             style="background-color: var(--white); background-image: var(--dc-gy-f-v); box-shadow: rgba(255, 255, 255, 0.18) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.18) 0px 2px 4px; color: var(--white); height: 48px; width: 48px;">
-                                                                            <div class="c1gqqhxk dir dir-ltr">
+                                                                            <div class="place__map-btn-icon dir dir-ltr">
                                                                               <div class="c1f4uzzv dir dir-ltr"><svg
                                                                                   viewBox="0 0 16 16"
                                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -14727,7 +14727,7 @@
                                                                         style="cursor: auto; height: 48px; transform: scale(1); transform-origin: 50% 50% 0px; transition: transform 150ms ease-out 0s; width: 48px;">
                                                                         <div class="c16iuq07 dir dir-ltr"
                                                                           style="background-color: var(--white); background-image: var(--dc-gy-f-v); box-shadow: rgba(255, 255, 255, 0.18) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.18) 0px 2px 4px; color: var(--white); height: 48px; width: 48px;">
-                                                                          <div class="c1gqqhxk dir dir-ltr">
+                                                                          <div class="place__map-btn-icon dir dir-ltr">
                                                                             <div class="c1f4uzzv dir dir-ltr"><svg
                                                                                 viewBox="0 0 16 16"
                                                                                 xmlns="http://www.w3.org/2000/svg"
