--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -4734,7 +4734,7 @@
                                                                     style="position: absolute; left: 0px; top: 0px; touch-action: pan-x pan-y; transform: translate(0.19776px, 0.294669px); z-index: 4000; display: block;">
                                                                     <div
                                                                       style="transform: translate(calc(-50% + 0px), calc(50% + 0px)); left: 50%; position: absolute; bottom: 0px; z-index: 0; pointer-events: auto; font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;">
-                                                                      <div class="ckcbxhv dir dir-ltr"
+                                                                      <div class="open-full-map dir dir-ltr"
                                                                         style="align-items: center; color: inherit; justify-content: normal; transition: transform 300ms cubic-bezier(0, 1.52, 0.51, 0.91) 0s; border: medium none; margin: 0px; padding: 0px; background: transparent; width: auto; overflow: visible; font: inherit;"
                                                                         aria-label="Your stay location, map pin"
                                                                         role="img"
@@ -14718,7 +14718,7 @@
                                                                   style="position: absolute; left: 0px; top: 0px; touch-action: pan-x pan-y; transform: translate(0.19776px, 0.294669px); z-index: 4000; display: block;">
                                                                   <div
                                                                     style="transform: translate(calc(-50% + 0px), calc(50% + 0px)); left: 50%; position: absolute; bottom: 0px; z-index: 0; pointer-events: auto; font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;">
-                                                                    <div class="ckcbxhv dir dir-ltr"
+                                                                    <div class="open-full-map dir dir-ltr"
                                                                       style="align-items: center; color: inherit; justify-content: normal; transition: transform 300ms cubic-bezier(0, 1.52, 0.51, 0.91) 0s; border: medium none; margin: 0px; padding: 0px; background: transparent; width: auto; overflow: visible; font: inherit;"
                                                                       aria-label="Your stay location, map pin"
                                                                       role="img"
