--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -167,10 +167,10 @@
                                                     </div>
                                                     <div class="_j3ajgm">
                                                       <ol
-                                                        class="lgx66tx dir dir-ltr"
+                                                        class="place__rate-text-wrapper dir dir-ltr"
                                                       >
                                                         <li
-                                                          class="l7n4lsf dir dir-ltr"
+                                                          class="place__rate-text dir dir-ltr"
                                                         >
                                                           <span class="_b1sf0c"
                                                             ><span
@@ -194,17 +194,17 @@
                                                               reviews.</span
                                                             ></span
                                                           ><span
-                                                            class="axjq0r dir dir-ltr"
+                                                            class="place__rate-text-spacer-wrapper dir dir-ltr"
                                                             ></span
                                                           >
                                                         </li>
                                                         <li
-                                                          class="l7n4lsf dir dir-ltr"
+                                                          class="place__rate-text dir dir-ltr"
                                                         >
                                                           <span
                                                             class="pen26si dir dir-ltr"
                                                             ><span
-                                                              class="s1b4clln dir dir-ltr"
+                                                              class="place__rate-text-spacer dir dir-ltr"
                                                               aria-hidden="true"
                                                             >· </span></span
                                                           ><span class="_b1sf0c"
