--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1381,8 +1381,8 @@
                                                       <div class="tehcqxo dir dir-ltr">
                                                         <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">Meet your Host, Kat</h2>
                                                         <div class="s9fngse dir dir-ltr">
-                                                          <ol class="lgx66tx dir dir-ltr">
-                                                            <li class="l7n4lsf dir dir-ltr">Host on Airbnb since 2011</li>
+                                                          <ol class="place__rate-text-wrapper dir dir-ltr">
+                                                            <li class="place__rate-text dir dir-ltr">Host on Airbnb since 2011</li>
                                                           </ol>
                                                         </div>
                                                       </div>
@@ -5312,7 +5312,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                               data-section-id="BREADCRUMBS_DEFAULT" style="padding-top: 32px;">
                                               <div class="flex-items-center">
                                                 <div class="flex-grow-1">
-                                                  <ol class="lgx66tx dir dir-ltr">
+                                                  <ol class="place__rate-text-wrapper dir dir-ltr">
                                                     <li class="inline-block dir dir-ltr"><a
                                                         href="https://www.airbnb.com/s/experiences/online?refinement_paths%5B%5D=%2Fexperiences&amp;tab_id=experience_tab"
                                                         class="text-link"><span class="_q9bblh">All online
@@ -6288,8 +6288,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div class="tehcqxo dir dir-ltr">
                                                         <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">Meet your Host, Kat</h2>
                                                         <div class="s9fngse dir dir-ltr">
-                                                          <ol class="lgx66tx dir dir-ltr">
-                                                            <li class="l7n4lsf dir dir-ltr">Host on Airbnb since 2011</li>
+                                                          <ol class="place__rate-text-wrapper dir dir-ltr">
+                                                            <li class="place__rate-text dir dir-ltr">Host on Airbnb since 2011</li>
                                                           </ol>
                                                         </div>
                                                       </div>
