rename new utilities

--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -321,7 +321,7 @@
                                             data-section-id="EXPLORE_HEADER_LOGO"
                                           >
                                             <a
-                                              class="header__brand cbavvlr dir dir-ltr"
+                                              class="header__brand text-primary dir dir-ltr"
                                               aria-label="Airbnb Homepage"
                                               href="/"
                                             >
@@ -10654,7 +10654,7 @@
                                             data-section-id="EXPLORE_HEADER_LOGO"
                                           >
                                             <a
-                                              class="header__brand cbavvlr dir dir-ltr"
+                                              class="header__brand text-primary dir dir-ltr"
                                               aria-label="Airbnb Homepage"
                                               href="/"
                                             >
