--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -196,7 +196,7 @@
                                             data-section-id="EXPLORE_HEADER_LOGO"
                                           >
                                             <a
-                                              class="header__brand cbavvlr dir dir-ltr"
+                                              class="header__brand text-primary dir dir-ltr"
                                               aria-label="Airbnb Homepage"
                                               href="/"
                                             >
