--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -106,7 +106,7 @@
                                         >
                                           <div class="section-container">
                                             <div
-                                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                                              class="wrapper-full mq5rv0q dir dir-ltr"
                                               style="--maxWidth: 1120px"
                                             >
                                               <div
@@ -325,7 +325,7 @@
                                         >
                                           <div class="section-container">
                                             <div
-                                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                                              class="wrapper-full mq5rv0q dir dir-ltr"
                                               style="--maxWidth: 1120px"
                                             >
                                               <div
@@ -373,7 +373,7 @@
                                         >
                                           <div class="section-container">
                                             <div
-                                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                                              class="wrapper-full mq5rv0q dir dir-ltr"
                                               style="--maxWidth: 1120px"
                                             >
                                               <div
