--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -6946,7 +6946,7 @@
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width: 1120px">
                                         <div class="section-container">
-                                          <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
+                                          <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
                                             <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221)"></div>
                                             <div
                                               data-plugin-in-point-id="REPORT_TO_AIRBNB"
@@ -13268,7 +13268,7 @@
                           >
                             <div class="section-container">
                               <div
-                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                class="wrapper-full mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <section>
@@ -14681,7 +14681,7 @@
                           >
                             <div class="section-container">
                               <div
-                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                class="wrapper-full mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <section>
@@ -16320,7 +16320,7 @@
                           >
                             <div class="section-container">
                               <div
-                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                class="wrapper-full mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <section>
@@ -16535,7 +16535,7 @@
                           <div class="_1rabovf" data-testid="modal-sheet-availability-calendar">
                             <div class="_yabr07">
                               <div class="section-container">
-                                <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                   <div>
                                     <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                                       <div class="t5p7tdn dir dir-ltr">
@@ -17706,7 +17706,7 @@
                         <div data-plugin-in-point-id="BOOK_IT_CALENDAR_SHEET" data-section-id="BOOK_IT_CALENDAR_SHEET">
                           <div class="_1ylz08x">
                             <div class="section-container">
-                              <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                              <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
                                 <div class="_9p0plx" data-testid="book-it-default">
                                   <div class="_754m05">
                                     <div
